// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle should render component 1`] = `
<div
  className="mfui-beta-page-title"
>
  <Header
    as="h1"
    className="mfui-beta-page-title__title"
    color="black"
    hAlign="inherit"
  >
    title
  </Header>
</div>
`;

exports[`PageTitle should render with limited width 1`] = `
<div
  className="mfui-beta-page-title"
>
  <Breadcrumbs
    className="mfui-beta-page-title__breadcrumbs"
    items={
      Array [
        Object {
          "href": "#",
          "title": "Тарифы",
        },
        Object {
          "href": "#",
          "title": "Управляй !",
        },
        Object {
          "href": "#",
          "title": "Менеджер",
        },
      ]
    }
  />
  <Grid>
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-beta-page-title__badge mfui-beta-page-title__badge_under-breadcrumbs"
      >
        badge
      </div>
      <Header
        as="h1"
        className="mfui-beta-page-title__title"
        color="black"
        hAlign="inherit"
      >
        title
      </Header>
    </GridColumn>
  </Grid>
</div>
`;

exports[`PageTitle should render with optional props 1`] = `
<div
  className="mfui-beta-page-title custom-class-name"
>
  <Breadcrumbs
    className="mfui-beta-page-title__breadcrumbs breadcrumbs-custom-class-name"
    items={
      Array [
        Object {
          "href": "#",
          "title": "Тарифы",
        },
        Object {
          "href": "#",
          "title": "Управляй !",
        },
        Object {
          "href": "#",
          "title": "Менеджер",
        },
      ]
    }
  />
  <div
    className="mfui-beta-page-title__badge mfui-beta-page-title__badge_under-breadcrumbs"
  >
    badge
  </div>
  <Header
    as="h1"
    className="mfui-beta-page-title__title"
    color="black"
    hAlign="inherit"
  >
    title
  </Header>
</div>
`;
